--- a/css/style.css
+++ b/css/style.css
@@ -457,6 +457,7 @@ padding: 10px 0;
     text-align: center;
     margin-top: 15px;
     color: black;
+    margin-bottom: 30px;
 
 }
 .expert-other h2{
@@ -468,8 +469,183 @@ padding: 10px 0;
     font-size: 14px;
 }
 
+footer{
+    position: relative;
+    background: #fb5849;
+    width: 100%;
+    height: 150px;
+    display: flex;
+    padding: 0 10%;
+    justify-content: space-between;
+    align-items: center;
+}
+.left-content{
+  width: 50%;
+}
+
+.left-content li {
+    list-style: none;
+    display: inline-block;
+    height: 40px;
+    width: 40px;
+    margin: 10px;
+}
+ 
+.left-content  li a img{
+    overflow: hidden;
+    object-fit: cover;
+    width: 100%;
+}
+.right-content p{
+ color: white;
+ font-size: 20px;
+ font-weight: 400;
+}
 
 
+
+
+
+
+.contact{
+    margin-top: 90px;
+    background: url(/img/reservation-bg.jpg);
+    background-size: cover;
+    height: 100vh;
+    width: 100%;
+    padding: 5% 8%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    overflow: hidden;
+}
+.contact .contact-left{
+    flex: 1;
+    margin-right: 20px;
+}
+.contact .contact-left .data h2{
+    color: white;
+    font-size: 15px;
+    font-weight: 400;
+    margin-bottom: 15px;
+    padding: 0 15px;
+    text-transform: uppercase;
+}
+.contact .contact-left .data h2::before{
+    display: inline-block;
+    content: "";
+    border-top: 1.5px solid white;
+    width: 30px;
+    margin: -.7rem;
+    margin-right: .7rem;
+    transform: translateY(-1rem);
+    font-weight: 600;
+}
+
+.contact .contact-left .data h1{
+    color: white;
+    font-size: 28px;
+    font-weight: 700;
+    margin-bottom: 15px;
+}
+.contact .contact-left .data .text{
+    color:white;
+    font-size: 14px;
+    margin-bottom: 15px;
+    font-weight: 400;
+}
+.contact .contact-left .data .text p{ 
+    margin-bottom: 15px;
+}
+.contact .contact-left  .card{
+    margin-top: 40px;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+}
+.contact .contact-left  .card .card-data{
+   position: relative;
+   width: 97%;
+   height: 150px;
+   background: white;
+   color: black;
+   margin-right: 20px;
+   text-align: center;
+   padding: 25px 0;
+   border-radius: 5px;
+}
+
+.contact .contact-left  .card .card-data h2{
+   font-size: 18px;
+   margin-bottom: 10px;
+   font-weight: 500;
+}
+
+.contact .contact-left  .card .card-data p:hover{
+    color:#fb5849;
+ }
+
+
+
+.contact .contact-right{
+    flex: 1;
+    justify-content: center;
+    width: 100%;
+}
+.contact .contact-form{
+    background:white;
+    height: 100%;
+    width: 98%;
+    border-radius: 5px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    padding: 35px 25px;
+    position: relative;
+}
+.contact .contact-form h2{
+    text-align: center;
+    font-weight: 700;
+    font-size: 28px;
+    color: #2a2a2a;
+    margin-bottom: 20px;
+}
+.contact .contact-form  .roww{
+   display: flex;
+   flex-direction: row;
+   justify-content: space-between; 
+}
+
+.contact .contact-form  .roww .form input{
+    width: 90%;
+    height: 40px;
+    margin: 10px;
+    border-radius: 5px;
+    align-items: center;
+} 
+.contact .contact-form .msg{
+   width: 96%;
+   height: 120px;
+   margin: 10px;
+   margin-right: 10px;
+   justify-content: center;
+   border-radius: 5px;
+}
+.contact .contact-form a{
+    text-decoration: none;
+    border: 1px solid #fb5849;
+    width: 96%;
+    padding: 10px 20px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    text-align: center;
+    box-sizing: inherit;
+    color:white;
+    background:#fb5849;
+    margin-left: 10px;
+ }
 
 
 
