--- a/css/responsive.css
+++ b/css/responsive.css
@@ -39,15 +39,17 @@
     .about{
       padding: 5% 10%;
     }
+    .menu{
+        width: 100%;
+    } 
     .menu .menu-slider .item{
         position: relative;
         margin: 0 1%;
-        width: 47%;
+        width: 100%;
         height: 380px;
         margin: 10px;
         justify-content: center;
         align-items: center;
-    
      }
      .expert-details{
         padding: 0 5%; 
@@ -180,6 +182,11 @@
         margin-top: 40px;
         margin-bottom: 20px;
     }
+  }
 
-
+  @media only screen and (max-width: 590px){
+    /* .disabled{ 
+         font-size: 300px;
+         color: red;
+    } */
   }
